# memory-managment

./: CMakeLists.txt  README.md  main.cpp
include/: item.h  process.h  storage.h
src/: storage.cpp
test/: CMakeLists.txt  main.cpp  main_test.cpp
